# DataScience-Piscine

DataScience/DS00/: README.md
DataScience/DS00/ex00/: .env  docker-compose.yml
DataScience/DS00/ex01/: .env  docker-compose.yml
DataScience/DS00/ex02/: .env  docker-compose.yml  tables.sql
DataScience/DS00/ex03/: automatic_table.py
DataScience/DS00/ex04/: item_table.py
DataScience/DS01/ex01/: customers_table.py
DataScience/DS01/ex02/: .env  remove_duplicates.py
DataScience/DS01/ex03/: fusion.py
DataScience/DS01/tests_files/: data_column_missing.csv  item_void.csv  item_with_many_commun_columns.csv  item_withoud_commun_columns.csv  item_without_missing_colums.csv
DataScience/DS02/ex00/: pie.py
DataScience/DS02/ex01/: chart.py
DataScience/DS02/ex02/: mustache.py
DataScience/DS02/ex03/: building.py
DataScience/DS02/ex04/: elbow.py
DataScience/DS02/ex05/: Clustering.py
DataScience/DS03/ex00/: histogram.py
DataScience/DS03/ex01/: Correlation.py
DataScience/DS03/ex02/: points.py
DataScience/DS03/ex03/: standarization.py
DataScience/DS03/ex04/: Normalize.py
DataScience/DS03/ex05/: split.py
DataScience/DS04/ex00/: Confusion_matrix.py
DataScience/DS04/ex01/: Heatmap.py
DataScience/DS04/ex02/: variances.py
DataScience/DS04/ex03/: Feature_Selection.py
DataScience/DS04/ex04/: Training_knight.csv  Tree.py  Tree.txt  Validation_knight.csv
DataScience/DS04/ex05/: KNN.py  KNN.txt  Training_knight.csv  (+1 more)
Piscine/Py00/ex09/: LICENSE  README.md  pyproject.toml  tester.py
Piscine/Py00/ex09/ft_package/: ft_package.py
entorno/: pyvenv.cfg
(+43 files in other folders)
